* Android project renamed as Space * Paths and symbols added to Eclipse/Android project

--- a/proj.android/.cproject
+++ b/proj.android/.cproject
@@ -22,7 +22,7 @@
 					<folderInfo id="0.1782640147." name="/" resourcePath="">
 						<toolChain id="org.eclipse.cdt.build.core.prefbase.toolchain.1296628831" name="No ToolChain" resourceTypeBasedDiscovery="false" superClass="org.eclipse.cdt.build.core.prefbase.toolchain">
 							<targetPlatform id="org.eclipse.cdt.build.core.prefbase.toolchain.1296628831.1260696372" name=""/>
-							<builder arguments="${workspace_loc:/com.studiopangea.ProjectTemplate}/make.sh NDK_DEBUG=1 V=1" command="bash" id="org.eclipse.cdt.build.core.settings.default.builder.1565176260" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" superClass="org.eclipse.cdt.build.core.settings.default.builder">
+							<builder arguments="${workspace_loc:/com.studiopangea.Space}/make.sh NDK_DEBUG=1 V=1" command="bash" id="org.eclipse.cdt.build.core.settings.default.builder.1565176260" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" superClass="org.eclipse.cdt.build.core.settings.default.builder">
 								<outputEntries>
 									<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="outputPath" name=""/>
 								</outputEntries>
@@ -34,11 +34,12 @@
 							</tool>
 							<tool id="org.eclipse.cdt.build.core.settings.holder.943910811" name="GNU C++" superClass="org.eclipse.cdt.build.core.settings.holder">
 								<option id="org.eclipse.cdt.build.core.settings.holder.incpaths.225889130" name="Include Paths" superClass="org.eclipse.cdt.build.core.settings.holder.incpaths" valueType="includePath">
-									<listOptionValue builtIn="false" value="&quot;${COCOS2DX_ROOT}/cocos2dx/&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${COCOS2DX_ROOT}/cocos2dx/include&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../iOS/ProjectTemplate/libs/CocosDenshion/include&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../iOS/ProjectTemplate/libs&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${COCOS2DX_ROOT}/cocos2dx/platform/android&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${COCOS2DX_ROOT}/external&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${COCOS2DX_ROOT}/CocosDenshion/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${COCOS2DX_ROOT}/cocos2dx/kazmath/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${COCOS2DX_ROOT}/cocos2dx&quot;"/>
 								</option>
 								<inputType id="org.eclipse.cdt.build.core.settings.holder.inType.1087822252" languageId="org.eclipse.cdt.core.g++" languageName="GNU C++" sourceContentType="org.eclipse.cdt.core.cxxSource,org.eclipse.cdt.core.cxxHeader" superClass="org.eclipse.cdt.build.core.settings.holder.inType"/>
 							</tool>
@@ -50,13 +51,7 @@
 					</folderInfo>
 					<fileInfo id="0.1782640147.897077494" name="HelloWorldScene.cpp" rcbsApplicability="disable" resourcePath="Classes/HelloWorldScene.cpp" toolsToInvoke="org.eclipse.cdt.build.core.settings.holder.943910811.917057893">
 						<tool id="org.eclipse.cdt.build.core.settings.holder.943910811.917057893" name="GNU C++" superClass="org.eclipse.cdt.build.core.settings.holder.113423798">
-							<option id="org.eclipse.cdt.build.core.settings.holder.incpaths.379774514" name="Include Paths" superClass="org.eclipse.cdt.build.core.settings.holder.incpaths" valueType="includePath">
-								<listOptionValue builtIn="false" value="&quot;${COCOS2DX_ROOT}/cocos2dx/&quot;"/>
-								<listOptionValue builtIn="false" value="&quot;${COCOS2DX_ROOT}/cocos2dx/include&quot;"/>
-								<listOptionValue builtIn="false" value="&quot;${NDK_ROOT}/platforms/android-9/arch-arm/usr/include/&quot;"/>
-								<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../iOS/ProjectTemplate/libs/Box2D&quot;"/>
-								<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../iOS/ProjectTemplate/libs/CocosDenshion/include/&quot;"/>
-							</option>
+							<option id="org.eclipse.cdt.build.core.settings.holder.incpaths.379774514" name="Include Paths" superClass="org.eclipse.cdt.build.core.settings.holder.incpaths" valueType="includePath"/>
 							<inputType id="org.eclipse.cdt.build.core.settings.holder.inType.1931199280" languageId="org.eclipse.cdt.core.g++" languageName="GNU C++" sourceContentType="org.eclipse.cdt.core.cxxSource,org.eclipse.cdt.core.cxxHeader" superClass="org.eclipse.cdt.build.core.settings.holder.inType"/>
 						</tool>
 					</fileInfo>
@@ -69,22 +64,23 @@
 		</cconfiguration>
 	</storageModule>
 	<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-		<project id="com.studiopangea.ProjectTemplate.null.1441286183" name="com.studiopangea.ProjectTemplate"/>
+		<project id="com.studiopangea.Space.null.1441286183" name="com.studiopangea.Space"/>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
 	<storageModule moduleId="refreshScope" versionNumber="2">
 		<configuration configurationName="Default">
-			<resource resourceType="PROJECT" workspacePath="/com.studiopangea.ProjectTemplate"/>
+			<resource resourceType="PROJECT" workspacePath="/com.studiopangea.Space"/>
 		</configuration>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 	<storageModule moduleId="scannerConfiguration">
 		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
-		<scannerConfigBuildInfo instanceId="0.1782640147.2064037490">
-			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
-		</scannerConfigBuildInfo>
 		<scannerConfigBuildInfo instanceId="0.1782640147">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
+		<scannerConfigBuildInfo instanceId="0.1782640147.2064037490">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+		</scannerConfigBuildInfo>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 </cproject>
