--- a/proj.android/AndroidManifest.xml
+++ b/proj.android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.studiopangea.demo.ProjectTemplate"
+      package="com.studiopangea.demo.Space"
       android:versionCode="1"
       android:versionName="1.0">
 
@@ -10,7 +10,7 @@
         android:debuggable="true"
         android:icon="@drawable/icon">
 
-        <activity android:name=".ProjectTemplate"
+        <activity android:name=".Space"
                   android:label="@string/app_name"
                   android:screenOrientation="landscape"
                   android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
