--- a/proj.android/.cproject
+++ b/proj.android/.cproject
@@ -22,7 +22,7 @@
 					<folderInfo id="0.1782640147." name="/" resourcePath="">
 						<toolChain id="org.eclipse.cdt.build.core.prefbase.toolchain.1296628831" name="No ToolChain" resourceTypeBasedDiscovery="false" superClass="org.eclipse.cdt.build.core.prefbase.toolchain">
 							<targetPlatform id="org.eclipse.cdt.build.core.prefbase.toolchain.1296628831.1260696372" name=""/>
-							<builder arguments="${workspace_loc:/com.studiopangea.Space}/make.sh NDK_DEBUG=1 V=1" command="bash" id="org.eclipse.cdt.build.core.settings.default.builder.1565176260" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" superClass="org.eclipse.cdt.build.core.settings.default.builder">
+							<builder id="org.eclipse.cdt.build.core.settings.default.builder.1565176260" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" superClass="org.eclipse.cdt.build.core.settings.default.builder">
 								<outputEntries>
 									<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="outputPath" name=""/>
 								</outputEntries>
@@ -51,7 +51,7 @@
 					</folderInfo>
 					<fileInfo id="0.1782640147.897077494" name="HelloWorldScene.cpp" rcbsApplicability="disable" resourcePath="Classes/HelloWorldScene.cpp" toolsToInvoke="org.eclipse.cdt.build.core.settings.holder.943910811.917057893">
 						<tool id="org.eclipse.cdt.build.core.settings.holder.943910811.917057893" name="GNU C++" superClass="org.eclipse.cdt.build.core.settings.holder.113423798">
-							<option id="org.eclipse.cdt.build.core.settings.holder.incpaths.379774514" name="Include Paths" superClass="org.eclipse.cdt.build.core.settings.holder.incpaths" valueType="includePath"/>
+							<option id="org.eclipse.cdt.build.core.settings.holder.incpaths.379774514" name="Include Paths" superClass="org.eclipse.cdt.build.core.settings.holder.incpaths"/>
 							<inputType id="org.eclipse.cdt.build.core.settings.holder.inType.1931199280" languageId="org.eclipse.cdt.core.g++" languageName="GNU C++" sourceContentType="org.eclipse.cdt.core.cxxSource,org.eclipse.cdt.core.cxxHeader" superClass="org.eclipse.cdt.build.core.settings.holder.inType"/>
 						</tool>
 					</fileInfo>
