--- a/proj.android/.project
+++ b/proj.android/.project
@@ -52,6 +52,11 @@
 			<type>2</type>
 			<locationURI>PARENT-1-PARENT_LOC/Classes</locationURI>
 		</link>
+		<link>
+			<name>Resources</name>
+			<type>2</type>
+			<locationURI>PARENT-1-PARENT_LOC/Resources</locationURI>
+		</link>
 	</linkedResources>
 	<variableList>
 		<variable>
