--- a/proj.android/AndroidManifest.xml
+++ b/proj.android/AndroidManifest.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.studiopangea.demo.space"
+      package="com.studiopangea.game"
       android:versionCode="1"
       android:versionName="1.0">
 
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="10"/>
-    
+
     <supports-screens android:largeScreens="true"
                       android:smallScreens="true"
                       android:anyDensity="true"
                       android:normalScreens="true"/>
-    
+
     <application android:label="@string/app_name"
         android:icon="@drawable/icon">
 
-        <activity android:name=".Space"
+        <activity android:name="Space"
                   android:label="@string/app_name"
-                  android:screenOrientation="landscape"
+                  android:screenOrientation="portrait"
                   android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
                   android:configChanges="orientation">
             <intent-filter>
